fix overflow sidebar (not so fixed tho)

--- a/styles/aboutus.css
+++ b/styles/aboutus.css
@@ -13,6 +13,7 @@ body{
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
+  min-height: 100vh;
   overflow-x: hidden;
 }
 
@@ -184,8 +185,15 @@ footer img{
 
 .sidebar-overlay{
   display: none;
+  position: absolute;
   filter: opacity(0);
   transition: 0.4s ease-in;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: black;
+  z-index: 2;
 }
 
 @media screen and (max-width: 1156px){
@@ -240,31 +248,26 @@ footer img{
 
 /* MOBILE */
 @media screen and (max-width: 768px){
-  /* SIDEBAR */
-  .sidebar-overlay{
-    display: none;
-    position: absolute;
-    background-color: black;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 2;
+  html,body{
+    overflow: hidden;
   }
 
+  /* SIDEBAR */
   .sidebar-overlay-active{
     display: block;
     filter: opacity(0.6);
   }
 
+  /* nav */
   .nav-list{
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
     position: absolute;
     z-index: 3;
     width: 70%;
+    height: 100vh;
     top: -18px;
     bottom: 0;
     right: 0;
@@ -275,6 +278,7 @@ footer img{
   }
 
   .nav-slide{
+    display: flex;
     transform: translateX(0);
   }
 
@@ -364,6 +368,7 @@ footer img{
   /* FOOTER */
   footer{
     font-size: 0.6rem;
+    bottom: 0;
   }
 
   footer img{
