--- a/styles/menus.css
+++ b/styles/menus.css
@@ -14,6 +14,7 @@ body{
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
   overflow-x: hidden;
+  min-height: 100vh;
 }
 
 /* DESKTOP */
@@ -289,37 +290,40 @@ footer img{
 
 .sidebar-overlay{
   display: none;
+  position: absolute;
   filter: opacity(0);
   transition: 0.4s ease-in;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: black;
+  z-index: 2;
 }
 
 /* MOBILE */
 @media screen and (max-width: 768px){
-  /* SIDEBAR */
-  .sidebar-overlay{
-    display: none;
-    position: absolute;
-    background-color: black;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 2;
+  html,body{
+    overflow: hidden;
+    min-height: 100vh;
   }
 
+  /* SIDEBAR */
   .sidebar-overlay-active{
     display: block;
     filter: opacity(0.6);
   }
 
+  /* nav */
   .nav-list{
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
     position: absolute;
     z-index: 3;
     width: 70%;
+    height: 100vh;
     top: -18px;
     bottom: 0;
     right: 0;
@@ -330,6 +334,7 @@ footer img{
   }
 
   .nav-slide{
+    display: flex;
     transform: translateX(0);
   }
 
